hphp/test/slow/parser/variable_in_enum.php.expectf

Fatal error: Expected constant expression for initializer in %s/variable_in_enum.php on line 2
